  * Drop appstream from Build-Depends
    - This prevents that irrelevant translatable strings are extracted
      when building for Ubuntu (LP: #1927149).

  [ Adrian Bunk ]
  * Add mipsel to the gnome-software-plugin-flatpak architecture list

  [ Laurent Bigonville ]
  * debian/watch: Update the URL to follow the new version scheme
  * New upstream release
    - Adjust the build-dependencies
  * debian/rules: Enable the apt URL handler in the .desktop file

 -- Laurent Bigonville <bigon@debian.org>  Mon, 13 Sep 2021 00:45:25 +0200

gnome-software (3.38.1-1) unstable; urgency=medium

  * Team upload
  * New upstream release
    - Fix package details not found for some packages
    - Ignore harmless warnings when using unusual fwupd versions
    - Translation updates
  * Drop patch that was applied upstream

 -- Simon McVittie <smcv@debian.org>  Thu, 18 Feb 2021 15:08:20 +0000

gnome-software (3.38.0-3) unstable; urgency=medium

  * Add an upstream patch to fix offline updates (Closes: #972506)

 -- Laurent Bigonville <bigon@debian.org>  Wed, 23 Dec 2020 09:33:29 +0100

gnome-software (3.38.0-2) unstable; urgency=medium

  * Team upload

  [ Gunnar Hjalmarsson ]
  * d/control changes needed for Ubuntu's language packs:
    - Set X-Ubuntu-Use-Langpack header
    - Add policykit-1 to Build-Depends to make xgettext able to handle
      org.gnome.software.external-appstream.policy.in.in

  [ Simon McVittie ]
  * d/rules: Remove unused files even in purely arch-indep builds.
    This fixes FTBFS (from dh_missing --fail-missing) when only building
    the arch-indep packages.

 -- Simon McVittie <smcv@debian.org>  Mon, 05 Oct 2020 18:42:42 +0100

gnome-software (3.38.0-1) unstable; urgency=medium

  * New upstream release
  * Bump debhelper-compat to 13
  * debian/rules: Remove libgnomesoftware.a

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Mon, 05 Oct 2020 12:25:03 +0200

gnome-software (3.36.1-2) unstable; urgency=medium
