@@ -1,2 +1,2 @@
-usr/lib/*/gs-plugins-*/libgs_plugin_snap*.so
+usr/lib/*/gnome-software/plugins-*/libgs_plugin_snap*.so
 usr/share/metainfo/org.gnome.Software.Plugin.Snap.metainfo.xml
