@@ -9,11 +9,9 @@ export DEB_LDFLAGS_MAINT_STRIP := -Wl,-Bsymbolic-functions
 GS_CONFIGURE_FLAGS = \
 	-Dgsettings_desktop_schemas=enabled \
 	-Dodrs=true \
-	-Dostree=false \
 	-Dpackagekit=true \
 	-Dpackagekit_autoremove=true \
 	-Drpm_ostree=false \
-	-Dubuntu_reviews=false \
 	-Dapt=true \
 
 # these are conditionally re-enabled later
@@ -66,12 +64,6 @@ endif
 override_dh_auto_configure:
 	dh_auto_configure -- $(GS_CONFIGURE_FLAGS)
 
-override_dh_auto_install:
-	dh_auto_install
-ifneq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
-	rm -f debian/tmp/usr/lib/*/gs-plugins-*/libgs_plugin_ubuntu*
-endif
-
 override_dh_installgsettings:
 	sed "s#@FREE_REPOS@#$(FREE_REPOS)#g" debian/gnome-software.gsettings-override.in > debian/gnome-software.gsettings-override
 	sed -i "s/@DISTRO@/$(DISTRO_ID)/g" debian/gnome-software.gsettings-override
@@ -80,18 +72,15 @@ override_dh_installgsettings:
 
 override_dh_install:
 	# Remove unused files
-	rm -f debian/tmp/usr/lib/*/gs-plugins-*/*.a
-	rm -f debian/tmp/usr/lib/*/gs-plugins-*/*.la
-	rm -f debian/tmp/usr/lib/*/gs-plugins-*/libgs_plugin_fedora*
-	rm -f debian/tmp/usr/lib/*/libgnomesoftware.a
+	rm -f debian/tmp/usr/lib/*/gnome-software/plugins-*/libgs_plugin_fedora*
 	dh_install
 
 override_dh_missing:
 	dh_missing --fail-missing
 
 	# These files are split out to separate packages
-	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_flatpak*
-	rm -f debian/gnome-software/usr/lib/*/gs-plugins-*/libgs_plugin_snap*
+	rm -f debian/gnome-software/usr/lib/*/gnome-software/plugins-*/libgs_plugin_flatpak*
+	rm -f debian/gnome-software/usr/lib/*/gnome-software/plugins-*/libgs_plugin_snap*
 	rm -f debian/gnome-software/usr/share/metainfo/org.gnome.Software.Plugin.Flatpak.metainfo.xml
 	rm -f debian/gnome-software/usr/share/metainfo/org.gnome.Software.Plugin.Snap.metainfo.xml
 
